<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">The Women Rescue</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="emer">Women Rescue</string>
    <string name="police">Police</string>
    <string name="about">About Us</string>
    <string name="upadateinfo">Enter the contact details</string>
    <string name="updateit">Enter the Info</string>
    <string name="father">Father:</string>
    <string name="mother">Mother</string>
    <string name="brother">Brother</string>
    <string name="sister">Sister</string>
    <string name="friend">Friend</string>
    <string name="friend1">Friend1</string>
    <string name="alert">Alert</string>
    <string name="submit">Submit</string>
    <string name="confirm">Confirm</string>
    <string name="audio">Protocol1</string>
    <string name="mail">Mail info</string>

</resources>
