<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/test1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/emer"
        android:textColor="#FF0000"
        android:textSize="30sp"
        android:typeface="serif"
        android:visibility="visible" />

    <Button
        android:id="@+id/Police"
        android:layout_width="800sp"
        android:layout_height="50dp"
        android:layout_alignLeft="@+id/textView1"
        android:layout_below="@+id/textView1"
        android:layout_marginTop="14dp"
        android:text="@string/police"
        android:visibility="visible" />

    <Button
        android:id="@+id/bAlert"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/Police"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/Police"
        android:text="@string/alert"
         android:visibility="visible"  />

    <Button
        android:id="@+id/baudio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignRight="@+id/bAlert"
        android:layout_below="@+id/bAlert"
         android:visibility="visible" 
        android:text="False Voice" />

    <Button
        android:id="@+id/protoco2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/baudio"
        android:layout_alignRight="@+id/baudio"
        android:layout_below="@+id/baudio"
        android:text="Cam" />

    <Button
        android:id="@+id/vorec"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/protoco2"
        android:layout_alignRight="@+id/protoco2"
        android:layout_below="@+id/protoco2"
        android:text="Mic" />

</RelativeLayout>